# chat-fww

./: .dockerignore  Dockerfile  README.md
.github/workflows/: docker.yml
chat/: index.html  tailwind.config.js
chat/src/: context.tsx  index.tsx
chat/src/routes/: Chat.tsx  Index.tsx  SetUp.tsx
client/: .env.development  index.html  package.json  pnpm-lock.yaml
client/src/: context.tsx  index.css  index.tsx
client/src/components/: TopAppBar.tsx
client/src/routes/: Chat.tsx  Index.tsx  SetUp.tsx
server/: Cargo.toml
server/src/: main.rs
server/src/actor/: delivery_service.rs  mod.rs  user.rs  websocket.rs
